feat: autenticação e gestão de acessos por roles