@@ -15,6 +15,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class SecurityFilter extends OncePerRequestFilter {
@@ -30,7 +31,7 @@ public class SecurityFilter extends OncePerRequestFilter {
 
         if(login != null){
             UserEntity user = userRepository.findByUsuario(login).orElseThrow(() -> new RuntimeException("Usuário não encontrado"));
-            var authorities = Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"));
+            var authorities = List.of(new SimpleGrantedAuthority(user.getRole()));
             var authentication = new UsernamePasswordAuthenticationToken(user, null, authorities);
             SecurityContextHolder.getContext().setAuthentication(authentication);
         }
